--- a/package.json
+++ b/package.json
@@ -10,30 +10,32 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "react": "^19.1.0",
-    "react-dom": "^19.1.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "three": "^0.161.0",
     "@react-three/fiber": "^8.15.16",
     "@react-three/drei": "^9.99.0",
     "cannon-es": "^0.20.0",
     "@react-three/cannon": "^6.5.2",
     "zustand": "^4.5.1",
-    "gsap": "^3.12.5"
+    "gsap": "^3.12.5",
+    "react-router-dom": "^6.22.0"
   },
   "devDependencies": {
-    "@types/react": "^19.1.1",
-    "@types/react-dom": "^19.1.2",
+    "@types/react": "^18.2.55",
+    "@types/react-dom": "^18.2.19",
     "@types/three": "^0.161.2",
-    "@vitejs/plugin-react": "^4.3.4",
+    "@vitejs/plugin-react": "^4.2.1",
     "@typescript-eslint/eslint-plugin": "^7.0.1",
     "@typescript-eslint/parser": "^7.0.1",
     "autoprefixer": "^10.4.17",
-    "eslint": "^9.24.0",
-    "eslint-plugin-react-hooks": "^5.2.0",
-    "eslint-plugin-react-refresh": "^0.4.19",
+    "eslint": "^8.56.0",
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "eslint-plugin-react-refresh": "^0.4.5",
     "postcss": "^8.4.35",
     "tailwindcss": "^3.4.1",
-    "typescript": "^5.7.3",
-    "vite": "^6.2.6"
+    "typescript": "^5.3.3",
+    "vite": "^5.1.0",
+    "@types/node": "^20.11.17"
   }
 }
