--- a/package.json
+++ b/package.json
@@ -10,24 +10,25 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@react-three/cannon": "^6.6.0",
+    "@react-three/drei": "^9.122.0",
+    "@react-three/fiber": "^8.18.0",
+    "cannon-es": "^0.20.0",
+    "gsap": "^3.12.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.22.0",
     "three": "^0.161.0",
-    "@react-three/fiber": "^8.15.16",
-    "@react-three/drei": "^9.99.0",
-    "cannon-es": "^0.20.0",
-    "@react-three/cannon": "^6.5.2",
-    "zustand": "^4.5.1",
-    "gsap": "^3.12.5",
-    "react-router-dom": "^6.22.0"
+    "zustand": "^4.5.1"
   },
   "devDependencies": {
+    "@types/node": "^20.11.17",
     "@types/react": "^18.2.55",
     "@types/react-dom": "^18.2.19",
     "@types/three": "^0.161.2",
-    "@vitejs/plugin-react": "^4.2.1",
     "@typescript-eslint/eslint-plugin": "^7.0.1",
     "@typescript-eslint/parser": "^7.0.1",
+    "@vitejs/plugin-react": "^4.2.1",
     "autoprefixer": "^10.4.17",
     "eslint": "^8.56.0",
     "eslint-plugin-react-hooks": "^4.6.0",
@@ -35,7 +36,6 @@
     "postcss": "^8.4.35",
     "tailwindcss": "^3.4.1",
     "typescript": "^5.3.3",
-    "vite": "^5.1.0",
-    "@types/node": "^20.11.17"
+    "vite": "^5.1.0"
   }
 }
