Refactor: update component paths and remove unused pages and layouts

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,7 +19,7 @@
     "paths": {
       "@/*": ["src/*"],
       "@assets/*": ["src/assets/*"],
-      "@components/*": ["src/components/*"],
+      "@components/*": ["src/pages/components/*"],
       "@game/*": ["src/game/*"],
       "@scenes/*": ["src/scenes/*"],
       "@shaders/*": ["src/shaders/*"],
