--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@react-three/drei": "^9.122.0",
     "@react-three/fiber": "^8.18.0",
     "cannon-es": "^0.20.0",
+    "framer-motion": "^12.7.4",
     "gsap": "^3.12.5",
     "lucide-react": "^0.488.0",
     "react": "^18.2.0",
